--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 como profissional na área de análise de dados. Para alcançar esses objetivos, 
                 estou planejando iniciar uma graduação em análise de dados.</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da karen alice">
+        <img class="apresentacao__imagem" src="imagem.png" alt="Foto da karen alice">
     </main>
 </body>
 
